--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,10 @@ body {
 /* HEADER */
 header {
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: space-between;
-
+    z-index: 10;
     width: 75%;
 
     margin: 0 auto;
@@ -230,55 +231,48 @@ section {
 
     justify-content: center;
     align-items: center;
+    padding: 70px 20px;
 }
 
 #apresentacao {
     display: flex;
-
-    padding: 110px 20px;
-    gap: 150px;
-}
-
-.apt-foto img {
-    width: 100%;
-    height: auto;
-    max-width: 500px;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center; 
     
-    border: 5px solid var(--borders-color);
-    border-radius: 10px;
+    gap: 30px;
+    width: 100%;
 }
 
 .apt-texto {
-    max-width: 410px;
+    max-width: 750px;
     font-size: 22px;
-    text-align: justify;
+    text-align: center; 
 }
 
 .apt-infos {
-    max-width: 420px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    gap: 30px;
+    width: 100%;
 }
 
 .apt-sub-texto {
     display: flex;
     flex-direction: column;
-
-    max-width: 510px;
-
-    margin-top: 20px;
     gap: 6px;
+    max-width: 500px;
 }
 
 .apt-sub-lista {
     display: flex;
     align-items: center;
-    
-    width: 510px;
-
     opacity: 0;
     transform: translateX(-50px);
+    width: 100%;
 }
-
-/* Animação slide In */
 
 @keyframes slideInSubLista {
     0% {
@@ -291,64 +285,48 @@ section {
     }
 }
 
-
-/* Ativação da animação slide In Sub*/
 .apt-sub-lista.animate {
     animation: slideInSubLista 0.6s ease forwards;
 }
 
-.apt-sub-texto img{
+.apt-sub-texto img {
     rotate: 90deg;
-
     width: 40px;
     height: 35px;
 }
 
-.apt-sub-texto p{
-    font-size: 15px;
+.apt-sub-texto p {
+    font-size: 17px;
     font-weight: bold;
+    margin-left: 10px;
 }
 
 .apt-botao {
     display: flex;
-
-    width: 400px;
-
-    gap: 19px;
-
-    border-radius: 10px;
-
+    gap: 15px;
     font-weight: bold;
     font-size: 15px;
+    justify-content: center;
+    align-items: center;
 }
-
 
 .apt-botao a {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    width:195px;
-
+    width: 200px;
     padding: 15px;
     gap: 10px;
     margin-top: 20px;
-
     border: 3px solid var(--primary-color);
     border-radius: 10px;
-    
     text-decoration: none;
-
     cursor: pointer;
-    
     opacity: 0;
-    
     transform: translateY(50px);
     transition: transform 1s ease, background-color 0.3s ease;
-    
 }
 
-/* Animação slide pra cima */
 @keyframes slideUpBotao {
     0% {
         opacity: 0;
@@ -359,8 +337,6 @@ section {
         transform: translateY(0);
     }
 }
-
-/* Ativação da Animação SlideUp*/
 
 .apt-botao a.animate {
     animation: slideUpBotao 0.6s ease forwards;
@@ -373,7 +349,7 @@ section {
 
 .apt-botao a:hover {
     background-color: var(--primary-color);
-    transform: translateY(0) scale(1.1); 
+    transform: translateY(0) scale(1.1);
 }
 
 
@@ -526,11 +502,7 @@ body.sobrenos header {
 body.sobrenos #back-header {
     display: flex;
     margin: 0 auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-image: url("../assets/imgs/banner-concentro-kb.jpg");
-    padding-bottom: 400px;
+    padding-bottom: 200px;
     gap: 100px;
     flex-direction: column;
     position: relative;
@@ -541,11 +513,9 @@ body.sobrenos #back-header {
 body.sobrenos #back-header::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); 
+    background-color: rgba(0, 0, 0, 0.4); 
     z-index: -1;
 }
 
@@ -557,12 +527,11 @@ body.sobrenos #prazer-pci {
 body.sobrenos #apresentacao {
     display: flex;
 
-    padding: 150px 20px;
-    gap: 110px;
+    padding: 120px 20px;
 }
 
-body.sobrenos .apt-infos {
-    max-width: 720px;
+body.sobrenos .sobre-apt-infos {
+    max-width: 1000px;
 
     opacity: 0;
     transform: translateX(-100%);
@@ -572,14 +541,8 @@ body.sobrenos .apt-infos {
 body.sobrenos .apt-texto {
     margin-top: 50px;
     text-align: justify;
-    max-width: 610px;
-    font-size: 22px;
-}
-
-body.sobrenos .apt-foto {
-    opacity: 0;
-    transform: translateX(100%);
-    transition: opacity 0.5s, transform 0.8s;
+    max-width: 1000px;
+    font-size: 26px;
 }
 
 /* Animação para ativar o título */
@@ -590,12 +553,6 @@ body.sobrenos .animate-titulo {
 
 /* Animação para ativar o texto */
 body.sobrenos .animate-texto {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-/* Animação para ativar a imagem */
-body.sobrenos .animate-foto {
     opacity: 1;
     transform: translateX(0);
 }
@@ -1376,55 +1333,27 @@ body.sobrenos .animate-foto {
     }
 
     #apresentacao {
-        flex-direction: column;
-        align-items: center;
-        gap: 40px;
-        padding: 60px 20px;
-    }
-
-    .apt-foto img{
-        max-width: 100%;
-        height: auto;
-    }
-
-    .apt-infos {
-        max-width: 100%;
-        width: 100%;
-        padding: 0 10px;
-        box-sizing: border-box;
+        gap: 20px; /* Diminui o gap entre os itens */
+        padding: 60px 10px;
     }
 
     .apt-texto {
+        font-size: 18px; /* Reduz o tamanho da fonte */
         max-width: 100%;
-        font-size: 18px;
-        text-align: justify;
     }
 
-    .apt-sub-texto {
-        max-width: 100%;
-        align-items: center;
+    .apt-sub-texto p{
+        font-size: 14px;
     }
 
     .apt-sub-lista {
         width: 100%;
     }
 
-    .apt-sub-texto p {
-        font-size: 14px;
-    }
-    
-    /* Botões principais */
     .apt-botao {
-        flex-direction: column;
-        align-items: center;
         width: 100%;
         gap: 10px;
-        margin-top: 20px;
-    }
-
-    .apt-botao a {
-        width: 80%;
-        max-width: 300px;
+        flex-direction: column;
     }
 
     /* Dados */
@@ -1476,11 +1405,8 @@ body.sobrenos .animate-foto {
     }
 
     body.sobrenos #back-header {
-        background-position: center;
-        background-repeat: no-repeat;
-        background-image: url("../assets/imgs/banner-concentro-kb2.jpg");
-        background-size: cover; 
-        background-attachment: scroll; 
+        padding-bottom: 150px;
+        
     }
 
     body.sobrenos #prazer-pci {
@@ -1498,17 +1424,15 @@ body.sobrenos .animate-foto {
         gap: 70px;
     }
 
+    body.sobrenos .apt-titulo {
+        text-align: center;
+    }
     body.sobrenos .apt-texto {
         margin-top: 20px;
-        text-align: left;
+        text-align: center;
         max-width: 100%;
-        font-size: 18px;
+        font-size: 16px;
     }
-
-    body.sobrenos .apt-foto {
-        margin-top: 20px;
-    }
-
 
     .mvd-infos {
         width: 90%;
@@ -1907,7 +1831,7 @@ body.sobrenos .animate-foto {
     }
 
     .apt-infos {
-        max-width: 90%;
+        max-width: 800px;
         padding: 0 20px;
         text-align: center;
     }
@@ -1937,7 +1861,7 @@ body.sobrenos .animate-foto {
     }
 
     .apt-botao a {
-        width: 60%;
+        width: 70%;
         max-width: 220px;
         padding: 15px;
         font-size: 16px;
@@ -1971,11 +1895,7 @@ body.sobrenos .animate-foto {
     }
 
     body.sobrenos #back-header {
-        background-position: center;
-        background-repeat: no-repeat;
-        background-image: url("../assets/imgs/banner-concentro-kb.jpg");
-        background-size: cover; 
-        background-attachment: scroll; 
+        padding-bottom: 170px;
     }
 
     body.sobrenos #prazer-pci {
@@ -1992,19 +1912,15 @@ body.sobrenos .animate-foto {
 
     body.sobrenos .apt-infos {
         max-width: 90%;
+        justify-content: center;
+        align-items: center;
     }
 
     body.sobrenos .apt-texto {
         margin-top: 30px;
         text-align: justify;
-        max-width: 100%;
+        width: 600px;
         font-size: 20px;
-    }
-
-    body.sobrenos .apt-foto {
-        width: 100%;
-        height: auto;
-        max-width: 570px;
     }
 
     .mvd-infos {
