--- a/css/style.css
+++ b/css/style.css
@@ -800,7 +800,6 @@ body.sobrenos .animate-texto {
 }
 
 .serv-frases li p{
-   
     color: rgb(243, 60, 60);
 }
 
@@ -2209,4 +2208,28 @@ body.sobrenos .animate-texto {
     /* ------------------------------------------------------ */
     /* FOOTER */
     
+}
+
+
+.scroll {
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
+    background-color: rgb(78, 78, 78);
+    color: white;
+    font-size: 24px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    text-decoration: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s;
+    z-index: 10;
+}
+
+.scroll:hover {
+    background-color: var(--primary-color);
 }
